crates/parser/src/tests/snapshots/parser__tests__grammar__control_flow_exprs.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ if ready { run } else { stop }; while cond { step } else { done }; for mut x in xs { x }; iterate acc = init { cont acc }; case { a = b, c = d } }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(IfExpr),
        KwIf(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Enter(ElseClause),
        KwElse(1),
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(WhileExpr),
        KwWhile(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Enter(ElseClause),
        KwElse(1),
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(ForExpr),
        KwFor(1),
        Enter(IdentPat),
        KwMut(1),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        KwIn(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(IterateExpr),
        KwIterate(1),
        Enter(IdentPat),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Eq(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ContinueExpr),
        KwCont(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(CaseExpr),
        KwCase(1),
        OpenBrace(1),
        Enter(CaseArmList),
        Enter(CaseArm),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Eq(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Comma(1),
        Enter(CaseArm),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Eq(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
