crates/parser/src/tests/snapshots/parser__tests__grammar__dot_call_applies_the_value_on_the_left.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ f.(); a.f.(); a.(1, 2); a.f.{ x: 1 }; if a == b.{ y: 1 } { c }; }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(CallExpr),
        Enter(FieldExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Dot(1),
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        Enter(ExprField),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        Comma(1),
        Enter(ExprField),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(CallExpr),
        Enter(FieldExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Dot(1),
        Enter(ArgList),
        Enter(RecordExpr),
        OpenBrace(1),
        Enter(ExprField),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(IfExpr),
        KwIf(1),
        Enter(ChainExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        EqEq(2),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(ArgList),
        Enter(RecordExpr),
        OpenBrace(1),
        Enter(ExprField),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
