crates/parser/src/tests/snapshots/parser__tests__grammar__empty_input.snap
---
source: crates/parser/src/tests/grammar.rs
description: ""
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Exit,
        Exit,
    ],
    errors: [],
}
