crates/parser/src/tests/snapshots/parser__tests__grammar__expr_control_flow_atoms.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ return a; break 'done b; cont c; }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(ReturnExpr),
        KwReturn(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(BreakExpr),
        KwBreak(1),
        Label(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(ContinueExpr),
        KwCont(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
