crates/parser/src/tests/snapshots/parser__tests__grammar__expr_operator_precedence.snap
---
source: crates/parser/src/tests/grammar.rs
description: "a + b * c == d /\\ e"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(ChainExpr),
        Enter(ChainExpr),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Plus(1),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Star(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        EqEq(2),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        SlashBackslash(2),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
