crates/parser/src/tests/snapshots/parser__tests__grammar__expr_prefix_call_index_cast_field.snap
---
source: crates/parser/src/tests/grammar.rs
description: "-foo.bar(1)[i] as Int"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(PrefixExpr),
        Minus(1),
        Enter(CastExpr),
        Enter(IndexExpr),
        Enter(MethodCallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        Enter(ExprField),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        Enter(IndexArg),
        OpenBrack(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrack(1),
        Exit,
        Exit,
        KwAs(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
