crates/parser/src/tests/snapshots/parser__tests__grammar__function_item.snap
---
source: crates/parser/src/tests/grammar.rs
description: "add: (Int, Int) -> Int = \\(a, b). a + b;"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(FunctionItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(FnType),
        Enter(TupleType),
        OpenParen(1),
        Enter(TypeField),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Comma(1),
        Enter(TypeField),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        ThinArrow(2),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Eq(1),
        Enter(ClosureExpr),
        Backslash(1),
        Enter(TuplePat),
        OpenParen(1),
        Enter(PatField),
        Enter(IdentPat),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Comma(1),
        Enter(PatField),
        Enter(IdentPat),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        Dot(1),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Plus(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
