crates/parser/src/tests/snapshots/parser__tests__grammar__increment_and_decrement_are_rejected.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ i++; j--; a--b }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Plus(1),
        Enter(ErrorExpr),
        Error(0),
        Plus(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Minus(1),
        Enter(PrefixExpr),
        Minus(1),
        Enter(ErrorExpr),
        Error(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Minus(1),
        Enter(PrefixExpr),
        Minus(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [
        Expected {
            expected: Ident,
            actual: Plus,
        },
        Expected {
            expected: Ident,
            actual: Semi,
        },
    ],
}
