crates/parser/src/tests/snapshots/parser__tests__grammar__inner_attrs_and_attr_args.snap
---
source: crates/parser/src/tests/grammar.rs
description: "foo: mod = { #[inner(flag = true, nested({ a [b] }))]; #[outer = value] bar: mod; };"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(ModuleItem),
        Ident(1),
        Colon(1),
        KwMod(1),
        Eq(1),
        OpenBrace(1),
        Enter(ModuleInner),
        Enter(EmptyItem),
        Enter(Attr),
        Hash(1),
        OpenBrack(1),
        Enter(AttrInner),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Enter(AttrArg),
        Enter(DelimitedTokenTree),
        OpenParen(1),
        Enter(TokenTree),
        Ident(1),
        Exit,
        Enter(TokenTree),
        Eq(1),
        Exit,
        Enter(TokenTree),
        KwTrue(1),
        Exit,
        Enter(TokenTree),
        Comma(1),
        Exit,
        Enter(TokenTree),
        Ident(1),
        Exit,
        Enter(DelimitedTokenTree),
        OpenParen(1),
        Enter(DelimitedTokenTree),
        OpenBrace(1),
        Enter(TokenTree),
        Ident(1),
        Exit,
        Enter(DelimitedTokenTree),
        OpenBrack(1),
        Enter(TokenTree),
        Ident(1),
        Exit,
        CloseBrack(1),
        Exit,
        CloseBrace(1),
        Exit,
        CloseParen(1),
        Exit,
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        CloseBrack(1),
        Exit,
        Semi(1),
        Exit,
        Enter(ModuleItem),
        Enter(Attr),
        Hash(1),
        OpenBrack(1),
        Enter(AttrInner),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Enter(AttrArg),
        Eq(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrack(1),
        Exit,
        Ident(1),
        Colon(1),
        KwMod(1),
        Semi(1),
        Exit,
        Exit,
        CloseBrace(1),
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
